feat: split will indeed return status of each hand
