# openapi.yaml
@@ -219,11 +219,25 @@ paths:
                   firstHandCards:
                     type: array
                     items:
-                      $ref: '#/components/schemas/Card'
+                      type: object
+                      properties:
+                        rank:
+                          type: string
+                          enum: ['2', '3', '4', '5', '6', '7', '8', '9', '10', J, Q, K, A]
+                        suit:
+                          type: string
+                          enum: [spades, hearts, diamonds, clubs]
                   secondHandCards:
                     type: array
                     items:
-                      $ref: '#/components/schemas/Card'
+                      type: object
+                      properties:
+                        rank:
+                          type: string
+                          enum: ['2', '3', '4', '5', '6', '7', '8', '9', '10', J, Q, K, A]
+                        suit:
+                          type: string
+                          enum: [spades, hearts, diamonds, clubs]
         '404':
           description: Game not found
           content:
